Fix z-index issue on slideshow

--- a/app/assets/stylesheets/slideshow.css.scss
+++ b/app/assets/stylesheets/slideshow.css.scss
@@ -2,7 +2,7 @@
 //  .slideview: auto
 //    .slides: auto
 //      .slide: 5
-//      .overlay-nav: 10
+//      .overlay-nav: 9 (needs to be under fixed header)
 
 .slideview {
     position: relative;
@@ -169,7 +169,7 @@
             position: absolute;
             left: 0;
             top: 0;
-            z-index: 10;
+            z-index: 9;
             display: block;
             width: 100%;
             height: 100%;
